<resources>
    <string name="app_name">Book It</string>

    <!--Login Related-->
    <string name="login">Login</string>
    <string name="login_username_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="login_forget_password_label">Forgotten?</string>
    <string name="login_label">Login</string>
    <string name="forget_submit_latbel">Submit</string>

    <!--Register Related-->
    <string name="registration">Registration</string>
    <string name="register_label">Register</string>
    <string name="create_account">Create an account</string>
    <string name="register_name_label">Name</string>
    <string name="register_email_label">Email</string>
    <string name="register_password_label">Password</string>
    <string name="register_confirm_password_label">Confirm Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="submit">Submit</string>
    <string name="register_mobile_label">Mobile Number</string>
    <string name="logout">Logout</string>


    <string-array name="proof_array">
        <item>Choose proof</item>
        <item>Aadhar Card</item>
        <item>Voter Id</item>
        <item>Pan Card</item>
    </string-array>

    <string-array name="berth_array">
        <item>Choose berth</item>
        <item>Lower</item>
        <item>Middle</item>
        <item>Upper</item>
        <item>Side Lower</item>
        <item>Side Upper</item>
    </string-array>

    <string-array name="gender_array">
        <item>Choose gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_booking_history">My Bookings</string>
    <string name="new_booking">New Booking</string>
    <string name="my_bookings">My Bookings</string>
    <string name="title_activity_booking_search">Availability Result</string>
    <string name="from">From : </string>
    <string name="to">To :</string>
    <string name="title_activity_search">Train Search</string>
    <string name="title_activity_select_station">Search Location</string>
    <string name="from_station">From Station</string>
    <string name="to_station">To Station</string>
    <string name="select_date">Select Date</string>
    <string name="available_trains">Available Trains</string>
    <string name="title_activity_create_booking">Book Ticket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="add_passenger">Add Passenger</string>
    <string name="add">Add</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="passenger_age">Passenger Age</string>
    <string name="passengers">Passengers</string>
    <string name="book_now">Book Now</string>
    <string name="no_records_found">No records found</string>
</resources>
