<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.sampleapplication.bookit.booking.BookingSearchActivity"
        tools:showIn="@layout/activity_booking_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_normal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/from"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_medium" />

                <TextView
                    android:id="@+id/tvSourceLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/light_violet"
                    android:textSize="@dimen/font_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/to"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_medium" />

                <TextView
                    android:id="@+id/tvDestinationLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/light_violet"
                    android:textSize="@dimen/font_medium" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/spacing_normal"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/tvBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@color/color_primary"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="@dimen/spacing_small"
            android:text="@string/book_now"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_1dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@color/color_primary" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@color/color_primary"
            android:visibility="gone"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/light_violet" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</layout>
