<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sampleapplication.bookit.profile.MyProfileActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clipToPadding="false"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_normal">

                    <EditText
                        android:id="@+id/etRName"
                        style="@style/AppProfileEditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/register_name_label"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:longClickable="false"
                        android:paddingTop="@dimen/spacing_tiny"
                        android:paddingBottom="@dimen/spacing_normal"
                        app:theme="@style/ThemeEditTextProfile" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_normal">

                    <EditText
                        android:id="@+id/etMobile"
                        style="@style/AppProfileEditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/register_mobile_label"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:lines="1"
                        android:longClickable="false"
                        android:paddingTop="@dimen/spacing_tiny"
                        android:paddingBottom="@dimen/spacing_normal"
                        app:theme="@style/ThemeEditTextProfile" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_normal">

                    <EditText
                        android:id="@+id/etREmail"
                        style="@style/AppProfileEditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/register_email_label"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:longClickable="false"
                        android:paddingTop="@dimen/spacing_tiny"
                        android:paddingBottom="@dimen/spacing_normal"
                        app:theme="@style/ThemeEditTextProfile" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spGender"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:entries="@array/gender_array"
                    android:paddingTop="@dimen/spacing_tiny"
                    android:paddingBottom="@dimen/spacing_normal" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/linearProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ProgressBar
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>
